syntax = "proto3";

option java_multiple_files = true;
option java_package = "ds.service1";
option java_outer_classname = "Service1Impl";

package service1;


service Service1 {
  //UNary

  
  //Unary - Method 1 - Water Contamination Check
  rpc check(ContaminateLimit) returns (ContaminateCheck) {}
  
  
  /* //Client Streaming
  rpc sum(stream NumberRequest) returns (ContaminateCheck) {}
	//server streaming
  rpc fibonacci(NumberRequest) returns (stream NumberResponse) {}
	// bi directional
  rpc total(stream NumberRequest) returns (stream NumberResponse) {}
    */
}

//Method 1 
message ContaminateLimit {
  int32 limit = 25;
}

message ContaminateCheck {
  int32 level = 2;
}

//Method 2
message Pipe {
  
  int32 pipeId = 2;
  PipeShutdown pipeStatus = 1;
  map <int32, ContaminateLimit> contaminateAmount = 5;		
}

enum PipeShutdown {
	OPEN = 0;
	CLOSED =1;
}


//Method 3


/*
message NumberRequest {
  string text = 1;
  int32 number = 2;
}

message NumberResponse {
  string text = 1;
  int32 number = 2;
}

message SumResponse {
  string text = 1;
  int32 number = 2;
  float fnum = 3;
}
*/

//message Project {
//  string name = 1;
//  double budget = 2;
//  Person person = 3;
//}
//
//message Person {
//  string name = 1;
//  int32 id = 2;
//  Availability availability = 3;
//  map <int32, float> salary = 4;		// E.g. <PPSN, Salary>
//}
//
//enum Availability {
//  AVAILABLE = 0;
//  UNAVAILABLE = 1;
//}